[package]
name = "tauri-config-schema"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-utils = { version = "1.0.0", features = [
  "schema",
], path = "../tauri-utils" }
schemars = { version = "<=0.8.17", features = ["url", "preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.3", features = ["serde"] }
