[package]
name = "tauri-plugin"
version = "0.1.0"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[features]
build = ["dep:anyhow", "dep:cargo_metadata"]
runtime = ["dep:tauri"]

[dependencies]
anyhow = { version = "1", optional = true }
cargo_metadata = { version = "0.18", optional = true }
tauri = { version = "2.0.0-alpha.18", default-features = false, path = "../tauri", optional = true }

[package.metadata.docs.rs]
features = ["build", "runtime"]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]
