[package]
name = "tauri-runtime-wry"
version = "2.0.0-beta.18"
description = "Wry bindings to the Tauri runtime"
exclude = ["CHANGELOG.md", "/target"]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
wry = { version = "0.40", default-features = false, features = [
  "drag-drop",
  "protocol",
  "os-webview",
] }
tao = { version = "0.28", default-features = false, features = ["rwh_06"] }
tauri-runtime = { version = "2.0.0-beta.18", path = "../tauri-runtime" }
tauri-utils = { version = "2.0.0-beta.17", path = "../tauri-utils" }
raw-window-handle = "0.6"
http = "1.1"
url = "2"
tracing = { version = "0.1", optional = true }
log = "0.4"

[target."cfg(windows)".dependencies]
webview2-com = "0.31"
softbuffer = { version = "0.4", default-features = false }

[target."cfg(windows)".dependencies.windows]
version = "0.57"
features = ["Win32_Foundation", "Win32_Graphics_Dwm"]

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = { version = "=2.0", features = ["v2_38"] }
percent-encoding = "2.1"

[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
cocoa = "0.25"

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21"

[features]
devtools = ["wry/devtools", "tauri-runtime/devtools"]
macos-private-api = [
  "wry/fullscreen",
  "wry/transparent",
  "tauri-runtime/macos-private-api",
]
objc-exception = ["wry/objc-exception"]
linux-protocol-body = ["wry/linux-body", "webkit2gtk/v2_40"]
tracing = ["dep:tracing", "wry/tracing"]
macos-proxy = ["wry/mac-proxy"]
unstable = []
