[package]
name = "tauri-utils"
version = "2.0.0-beta.1"
description = "Utilities for Tauri"
exclude = [ "CHANGELOG.md", "/target" ]
readme = "README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
phf = { version = "0.11", features = [ "macros" ] }
brotli = { version = "3", optional = true, default-features = false, features = [ "std" ] }
url = { version = "2", features = [ "serde" ] }
html5ever = "0.26"
kuchiki = { package = "kuchikiki", version = "0.8" }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
schemars = { version = "0.8", features = [ "url" ], optional = true }
serde_with = "3"
aes-gcm = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true, features = [ "std" ] }
serialize-to-javascript = { version = "=0.1.1", optional = true }
ctor = "0.2"
json5 = { version = "0.4", optional = true }
toml = { version = "0.8", features = [ "parse" ] }
json-patch = "1.2"
glob = "0.3"
walkdir = { version = "2", optional = true }
memchr = "2"
semver = "1"
infer = "0.15"
dunce = "1"
log = "0.4.20"
cargo_metadata = { version = "0.18", optional = true }
data-url = { version = "0.3", optional = true }

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.4"

[target."cfg(target_os = \"macos\")".dependencies]
swift-rs = { version = "1.0.6", optional = true, features = [ "build" ] }

[features]
build = [
  "proc-macro2",
  "quote",
  "cargo_metadata",
  "schema",
  "swift-rs"
]
compression = [ "brotli" ]
schema = [ "schemars" ]
isolation = [ "aes-gcm", "getrandom", "serialize-to-javascript" ]
process-relaunch-dangerous-allow-symlink-macos = [ ]
config-json5 = [ "json5" ]
config-toml = [ ]
resources = [ "walkdir" ]
webview-data-url = [ "data-url" ]
