[package]
name = "tauri-utils"
version = "1.6.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
license = "Apache-2.0 OR MIT"
homepage = "https://tauri.app"
repository = "https://github.com/tauri-apps/tauri"
description = "Utilities for Tauri"
edition = "2021"
rust-version = "1.60"
exclude = [ "CHANGELOG.md", "/target" ]
readme = "README.md"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
phf = { version = "0.11", features = [ "macros" ] }
brotli = { version = "6", optional = true }
url = { version = "2", features = [ "serde" ] }
html5ever = "0.26" # kuchikiki requires 0.26 still
kuchiki = { package = "kuchikiki", version = "0.8" }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
schemars = { version = "0.8.18", features = [ "url" ], optional = true } # Forcing 0.8.18 as minimum due to breaking changes
serde_with = "3"
aes-gcm = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true, features = [ "std" ] }
serialize-to-javascript = { version = "=0.1.1", optional = true }
ctor = "0.2"
json5 = { version = "0.4", optional = true }
toml = { version = "0.7", optional = true } # the other used toml crates still use 0.7
json-patch = "2"
glob = { version = "0.3", optional = true }
walkdir = { version = "2", optional = true }
memchr = "2"
semver = "1"
infer = "0.14" # 0.15 raised msrv
dunce = "1"
log = "0.4"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.5"

[target."cfg(windows)".dependencies]
windows-version = "0.1"

[features]
build = [ "proc-macro2", "quote" ]
compression = [ "brotli" ]
schema = [ "schemars" ]
isolation = [ "aes-gcm", "getrandom", "serialize-to-javascript" ]
process-relaunch-dangerous-allow-symlink-macos = [ ]
config-json5 = [ "json5" ]
config-toml = [ "toml" ]
resources = [ "glob", "walkdir" ]
