[package]
name = "tauri"
version = "2.0.0-beta.2"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
exclude = [ "/test", "/.scripts", "CHANGELOG.md", "/target" ]
readme = "README.md"
links = "Tauri"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
features = [
  "wry",
  "unstable",
  "custom-protocol",
  "tray-icon",
  "devtools",
  "icon-png",
  "protocol-asset",
  "test"
]
rustc-args = [ "--cfg", "docsrs" ]
rustdoc-args = [ "--cfg", "docsrs" ]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-linux-android",
  "x86_64-apple-ios"
]

[package.metadata.cargo-udeps.ignore]
normal = [ "reqwest" ]
build = [ "tauri-build" ]
development = [ "quickcheck_macros" ]

[dependencies]
serde_json = { version = "1.0", features = [ "raw_value" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util" ] }
futures-util = "0.3"
uuid = { version = "1", features = [ "v4" ], optional = true }
url = { version = "2.4" }
anyhow = "1.0"
thiserror = "1.0"
tauri-runtime = { version = "2.0.0-beta.1", path = "../tauri-runtime" }
tauri-macros = { version = "2.0.0-beta.1", path = "../tauri-macros" }
tauri-utils = { version = "2.0.0-beta.1", features = [ "resources" ], path = "../tauri-utils" }
tauri-runtime-wry = { version = "2.0.0-beta.1", path = "../tauri-runtime-wry", optional = true }
getrandom = "0.2"
serde_repr = "0.1"
state = "0.6"
http = "0.2"
dirs-next = "2.0"
percent-encoding = "2.3"
reqwest = { version = "0.11", default-features = false, features = [ "json", "stream" ] }
bytes = { version = "1", features = [ "serde" ] }
raw-window-handle = "0.6"
glob = "0.3"
mime = "0.3"
data-url = { version = "0.3", optional = true }
serialize-to-javascript = "=0.1.1"
infer = { version = "0.15", optional = true }
png = { version = "0.17", optional = true }
ico = { version = "0.3.0", optional = true }
http-range = { version = "0.1.5", optional = true }
tracing = { version = "0.1", optional = true }
static_assertions = "1"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\", target_os = \"windows\", target_os = \"macos\"))".dependencies]
muda = { version = "0.11", default-features = false, features = [ "serde" ] }
tray-icon = { version = "0.11", default-features = false, features = [ "serde" ], optional = true }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18", features = [ "v3_24" ] }
webkit2gtk = { version = "=2.0.1", features = [ "v2_38" ] }

[target."cfg(target_os = \"macos\")".dependencies]
embed_plist = "1.2"
cocoa = "0.25"
objc = "0.2"
window-vibrancy = "0.5"

[target."cfg(windows)".dependencies]
webview2-com = "0.28"
window-vibrancy = "0.5"

  [target."cfg(windows)".dependencies.windows]
  version = "0.52"
  features = [ "Win32_Foundation" ]

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
log = "0.4"
heck = "0.4"

[target."cfg(target_os = \"android\")".dependencies]
jni = "0.21"

[target."cfg(target_os = \"ios\")".dependencies]
libc = "0.2"
objc = "0.2"
cocoa = "0.25"
swift-rs = "1.0.6"

[build-dependencies]
heck = "0.4"
tauri-build = { path = "../tauri-build/", default-features = false, version = "2.0.0-beta.1" }
tauri-utils = { path = "../tauri-utils/", version = "2.0.0-beta.1", features = [ "build" ] }

[dev-dependencies]
proptest = "1.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tauri = { path = ".", default-features = false, features = [ "wry" ] }
tokio = { version = "1", features = [ "full" ] }
cargo_toml = "0.17"
http-range = "0.1.5"

[features]
default = [ "wry", "compression", "objc-exception", "common-controls-v6" ]
unstable = [ ]
common-controls-v6 = [ "tray-icon?/common-controls-v6", "muda/common-controls-v6" ]
tray-icon = [ "dep:tray-icon" ]
tracing = [
  "dep:tracing",
  "tauri-macros/tracing",
  "tauri-runtime-wry/tracing"
]
test = [ ]
compression = [ "tauri-macros/compression", "tauri-utils/compression" ]
wry = [ "tauri-runtime-wry" ]
objc-exception = [ "tauri-runtime-wry/objc-exception" ]
linux-ipc-protocol = [ "tauri-runtime-wry/linux-protocol-body", "webkit2gtk/v2_40" ]
linux-libxdo = [ "tray-icon/libxdo", "muda/libxdo" ]
isolation = [ "tauri-utils/isolation", "tauri-macros/isolation", "uuid" ]
custom-protocol = [ "tauri-macros/custom-protocol" ]
native-tls = [ "reqwest/native-tls" ]
native-tls-vendored = [ "reqwest/native-tls-vendored" ]
rustls-tls = [ "reqwest/rustls-tls" ]
devtools = [ "tauri-runtime/devtools", "tauri-runtime-wry/devtools" ]
process-relaunch-dangerous-allow-symlink-macos = [ "tauri-utils/process-relaunch-dangerous-allow-symlink-macos" ]
macos-private-api = [
  "tauri-runtime/macos-private-api",
  "tauri-runtime-wry/macos-private-api"
]
webview-data-url = [ "tauri-utils/webview-data-url", "data-url" ]
protocol-asset = [ "http-range" ]
config-json5 = [ "tauri-macros/config-json5" ]
config-toml = [ "tauri-macros/config-toml" ]
icon-ico = [ "infer", "ico" ]
icon-png = [ "infer", "png" ]
macos-proxy = [ "tauri-runtime-wry/macos-proxy" ]

[[example]]
name = "commands"
path = "../../examples/commands/main.rs"

[[example]]
name = "helloworld"
path = "../../examples/helloworld/main.rs"

[[example]]
name = "multiwebview"
path = "../../examples/multiwebview/main.rs"
required-features = [ "unstable" ]

[[example]]
name = "multiwindow"
path = "../../examples/multiwindow/main.rs"

[[example]]
name = "parent-window"
path = "../../examples/parent-window/main.rs"

[[example]]
name = "navigation"
path = "../../examples/navigation/main.rs"

[[example]]
name = "splashscreen"
path = "../../examples/splashscreen/main.rs"

[[example]]
name = "state"
path = "../../examples/state/main.rs"

[[example]]
name = "streaming"
path = "../../examples/streaming/main.rs"

[[example]]
name = "isolation"
path = "../../examples/isolation/main.rs"
required-features = [ "isolation" ]

[[example]]
name = "run-iteration"
path = "../../examples/run-iteration/main.rs"
